--- a/css/styles.scss
+++ b/css/styles.scss
@@ -341,6 +341,92 @@ h1, h2, h3, h4 {
 		    }
 		}
 	}
+
+	/* Masonry Grid */
+
+	.masonry {
+		background: #FFEDCF;
+		padding: 50px;
+
+		&-grid {
+			align-content: flex-start;
+			display: flex;
+			flex-flow: row wrap;
+			justify-content: center;
+			margin: 0 auto;
+        	max-width: 1170px;
+		}
+
+		&-card {
+        	background-color: #ffffff;
+            box-shadow: 0px 0px 10px 0px rgba(110, 123, 140, 0.3);
+            flex: auto;
+            height: 320px;
+            margin: 7px;
+            position: relative;
+            width: 320px;
+
+			&.wide {
+				width: 480px;
+			}
+
+			img {
+				height: 100%;
+				object-fit: cover;
+				width: 100%;
+			}
+
+			.info-center {
+				align-items: center;
+				background: rgba(0, 0, 0, 0.3);
+				bottom: 0;
+				color: white;
+				display: flex;
+				font-size: 24px;
+				font-weight: bold;
+				justify-content: center;
+				left: 0;
+				padding: 0 10px;
+				position: absolute;
+				right: 0;
+				text-align: center;
+				text-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2);
+				top: 0;
+			}
+		}
+
+		&-card-half {
+			background-color: #ffffff;
+			box-shadow: 0px 0px 10px 0px rgba(110, 123, 140, 0.3);
+			display: flex;
+			flex-flow: column wrap;
+			flex: auto;
+			height: 320px;
+			justify-content: flex-end;
+			margin: 7px;
+			width: 320px;
+
+			&.wide {
+				width: 480px;
+			}
+
+			.card-img {
+				flex: auto;
+				height: 160px;
+				position: relative;
+
+				img {
+					height: 100%;
+					object-fit: cover;
+					width: 100%;
+				}
+			}
+
+			.card-text {
+			    padding: 0 20px;
+			}
+		}
+	}
 }
 
 /* Footer */
