--- a/css/styles.scss
+++ b/css/styles.scss
@@ -149,6 +149,11 @@ h1, h2, h3, h4 {
 	.main {
 	    padding: 1.7em;
 	    text-align: center;
+
+	    &-container {
+	    	margin: 0 auto;
+	    	max-width: 65%;
+	    }
 	}
 
 	/* News */
@@ -367,7 +372,11 @@ h1, h2, h3, h4 {
             width: 320px;
 
 			&.wide {
-				width: 480px;
+				height: auto;
+
+				@media (min-width: 560px) {
+					width: 480px;
+				}
 			}
 
 			img {
@@ -407,7 +416,11 @@ h1, h2, h3, h4 {
 			width: 320px;
 
 			&.wide {
-				width: 480px;
+				height: auto;
+
+				@media (min-width: 560px) {
+					width: 480px;
+				}
 			}
 
 			.card-img {
@@ -423,7 +436,112 @@ h1, h2, h3, h4 {
 			}
 
 			.card-text {
-			    padding: 0 20px;
+			    padding: 0 20px 5px;
+			}
+		}
+	}
+
+	/* Accordion */
+
+	.accordion {
+		display: flex;
+		flex-direction: column;
+		height: auto;
+
+		@media (min-width: 1170px) {
+		  	flex-direction: row;
+		  	height: 600px;
+		}
+
+		&-section {
+			background: #CFE8FF;
+			color: #6D92B2;
+			display: flex;
+			flex-direction: column;
+			flex: 1 0 10em;  
+			overflow: hidden;
+			padding: 1em;
+			transition: flex-basis 500ms ease-in-out .25s;
+
+			h2 {
+  				font-size: 1.2em;
+  				font-weight: 600;
+			}
+
+			&:hover {
+				flex-basis: 20em;
+			}
+
+			&:nth-child(2n) {
+				background: #3e5c76;
+				color: white;
+			}
+
+			@media (min-width: 1170px) {
+			  	flex-shrink: 1;
+			}
+		}
+	}
+
+	/* Info Cards */
+
+	.info-cards {
+		display: flex;
+		justify-content: center;
+		flex-wrap: wrap;
+		list-style: none;
+		margin: 0;
+		padding: 30px 50px;
+
+		&-item {
+			display: flex;   
+			margin-top: 0;
+			padding: 10px;
+
+			@media (min-width: 640px) {
+			  	width: 75%;
+			}
+
+			@media (min-width: 960px) {
+			  	width: 25%;
+			}
+		}
+
+		&-detail {
+			background-color: #fff;
+			display: flex;
+			flex-direction: column;
+		}
+
+		&-image {
+			img {
+				width: 100%;
+			}
+		}
+
+		&-content {
+			display: flex;
+			flex-direction: column;
+			flex: 1 0 auto;
+			margin-top: 0;
+			padding: 1.5em;
+
+			h2 {
+				margin: 0;
+			}
+
+	        p {
+	          flex: 1 0 auto;
+	        }
+
+			.info-cards-button {
+			    display: inline-block;
+			    padding: 0.8em 1em;
+			    font-weight: 700;
+			    line-height: 1;
+			    text-decoration: none;
+			    background-color: #aaa;
+			    color: #fff;
 			}
 		}
 	}
