--- a/css/styles.css
+++ b/css/styles.css
@@ -8,8 +8,20 @@ body {
   margin: 0;
   padding: 0; }
 
+* {
+  box-sizing: border-box; }
+
 h1, h2, h3, h4 {
   font-weight: 700; }
+
+button, input, optgroup, select, textarea {
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0; }
+
+button, hr, input {
+  overflow: visible; }
 
 /* Main Container */
 .container {
@@ -27,7 +39,8 @@ h1, h2, h3, h4 {
   /* Gallery Three */
   /* Masonry Grid */
   /* Accordion */
-  /* Info Cards */ }
+  /* Info Cards */
+  /* Contact Us */ }
   .container .navigation {
     background: #6D92B2;
     display: flex;
@@ -373,6 +386,52 @@ h1, h2, h3, h4 {
         text-decoration: none;
         background-color: #aaa;
         color: #fff; }
+  .container .contact {
+    background: #3e5c76;
+    color: #FFF6E9;
+    padding: 50px; }
+    .container .contact h2 {
+      margin: 0;
+      text-align: center; }
+    .container .contact form {
+      display: flex;
+      flex-direction: column;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      margin: 0 auto;
+      max-width: 600px;
+      padding: 4em 0; }
+      @media (min-width: 600px) {
+        .container .contact form {
+          flex-direction: row; } }
+    .container .contact input, .container .contact button {
+      height: 50px;
+      margin: 0 1em;
+      outline: 0;
+      padding: 10px; }
+    .container .contact input {
+      background-color: #fff;
+      border: 1px solid #3e5c76;
+      color: #6D92B2;
+      margin-bottom: 1em;
+      transition: border-color 0.4s; }
+      @media (min-width: 600px) {
+        .container .contact input {
+          flex: 3;
+          margin-bottom: 0; } }
+    .container .contact button {
+      background: #6D92B2;
+      border: 0;
+      box-shadow: inset 0 0 0 1px #CFE8FF;
+      color: #CFE8FF;
+      height: 50px;
+      letter-spacing: 1px;
+      transition: background 0.4s; }
+      .container .contact button:hover, .container .contact button:focus {
+        background: #709fc7; }
+      @media (min-width: 600px) {
+        .container .contact button {
+          flex: 100px; } }
 
 /* Footer */
 footer {
