--- a/css/styles.scss
+++ b/css/styles.scss
@@ -11,8 +11,23 @@ body {
     padding: 0;
 }
 
+* {
+	box-sizing: border-box;
+}
+
 h1, h2, h3, h4 {
 	font-weight: 700;
+}
+
+button, input, optgroup, select, textarea {
+	font-family: sans-serif;
+	font-size: 100%; 
+	line-height: 1.15; 
+	margin: 0; 
+}
+
+button, hr, input {
+    overflow: visible;
 }
 
 /* Main Container */
@@ -542,6 +557,71 @@ h1, h2, h3, h4 {
 			    text-decoration: none;
 			    background-color: #aaa;
 			    color: #fff;
+			}
+		}
+	}
+
+	/* Contact Us */
+
+	.contact {
+		background: #3e5c76;
+		color: #FFF6E9;
+		padding: 50px;
+
+		h2 {
+			margin: 0;
+			text-align: center;
+		}
+
+		form {
+			display: flex;
+			flex-direction: column;
+			flex-wrap: wrap;
+			justify-content: space-around;
+			margin: 0 auto;
+			max-width: 600px;
+			padding: 4em 0;
+
+			@media (min-width: 600px) {
+				flex-direction: row;
+			}
+		}
+
+		input, button {
+			height: 50px;
+			margin: 0 1em;
+			outline: 0;
+			padding: 10px;
+		}
+
+		input {
+			background-color: #fff;
+			border: 1px solid #3e5c76;
+			color: #6D92B2;
+			margin-bottom: 1em;
+			transition: border-color 0.4s;
+
+			@media (min-width: 600px) {
+				flex: 3;
+    			margin-bottom: 0;
+			}
+		}
+
+		button {
+			background: #6D92B2;
+			border: 0;
+			box-shadow: inset 0 0 0 1px #CFE8FF;
+			color: #CFE8FF;
+			height: 50px;
+			letter-spacing: 1px;
+			transition: background 0.4s;
+
+			&:hover, &:focus {
+				background: #709fc7;
+			}
+
+			@media (min-width: 600px) {
+				flex: 100px;
 			}
 		}
 	}
