Added Grid section

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ button, hr, input {
   min-height: calc(100vh - 90px);
   /* Primary Navigation */
   /* Banner Image */
+  /* Grid */
   /* Main Content */
   /* News */
   /* Gallery */
@@ -119,6 +120,33 @@ button, hr, input {
   @media (max-width: 600px) {
     .container .banner {
       height: 427px; } }
+  .container .grid {
+    background: #cfe8ff;
+    padding: 1.7em; }
+    .container .grid-hdr {
+      color: #3e5c76;
+      margin-top: 0; }
+    .container .grid-row {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 -.9375rem 1rem; }
+    .container .grid [class*="grid-col-"] {
+      background-color: #6d92b2;
+      color: #fff6e9;
+      padding: .75rem .9375rem;
+      width: 100%; }
+    @media (min-width: 34em) {
+      .container .grid-col-sm-6 {
+        flex: 0 0 50%; } }
+    @media (min-width: 48em) {
+      .container .grid-col-md-4 {
+        flex: 0 0 33.333333%; } }
+    @media (min-width: 62em) {
+      .container .grid-col-lg-4 {
+        flex: 0 0 33.333333%; } }
+    @media (min-width: 75em) {
+      .container .grid-col-xl-4 {
+        flex: 0 0 33.333333%; } }
   .container .main {
     padding: 1.7em;
     text-align: center; }
