--- a/css/styles.scss
+++ b/css/styles.scss
@@ -159,6 +159,54 @@ button, hr, input {
 	    }
 	}
 
+	/* Grid */
+	.grid {
+		background: #cfe8ff;
+		padding: 1.7em;
+
+		&-hdr {
+			color: #3e5c76;
+			margin-top: 0;
+		}
+
+		&-row {
+		    display: flex;
+		    flex-wrap: wrap;
+		    margin: 0 -.9375rem 1rem;
+		}
+
+		[class*="grid-col-"] {
+			background-color: #6d92b2;
+			color: #fff6e9;
+			padding: .75rem .9375rem;
+			width: 100%;
+		}
+
+		@media (min-width: 34em) {
+			&-col-sm-6 {
+			    flex: 0 0 50%;
+			}
+		}
+
+		@media (min-width: 48em) {
+			&-col-md-4 {
+			    flex: 0 0 33.333333%;
+			}
+		}
+
+		@media (min-width: 62em) {
+			&-col-lg-4 {
+			    flex: 0 0 33.333333%;
+			}
+		}
+
+		@media (min-width: 75em) {
+			&-col-xl-4 {
+			    flex: 0 0 33.333333%;
+			}
+		}
+	}
+
 	/* Main Content */
 
 	.main {
