--- a/css/sass/pages/_home.scss
+++ b/css/sass/pages/_home.scss
@@ -207,6 +207,78 @@ button, hr, input {
         }
     }
 
+    /* Zoom Gallery Grid */
+    .zoom-gallery {
+        background: #ffedcf;
+        color: #939598;
+        padding: 4rem 0;
+        position: relative;
+
+        &-content {
+            display: flex;
+            flex-wrap: wrap;   
+            margin: 0 auto;
+            max-width: 1200px;
+        }
+
+        &-item {
+            margin-right: .5rem;
+            overflow: hidden;
+            position: relative;
+            width: calc(25% - .375rem);
+    
+            &:nth-child(4n),
+            &:last-child {
+                margin-right: 0;
+            }
+    
+            &:nth-child(n + 5) {
+                margin-top: .5rem;
+            }
+    
+            &-overlay {
+                align-items: center;
+                background: rgba(#676868, .65);
+                display: flex;
+                height: 100%;
+                justify-content: center;
+                left: 0;
+                padding: 1.5rem;
+                position: absolute;
+                top: 0;
+                width: 100%;
+                z-index: 2;
+            }
+    
+            &-lbl {
+                color: #fff;
+                font-family: Arial, sans-serif;
+                font-size: 28px;
+                letter-spacing: 6px;
+                line-height: 1;
+                text-transform: uppercase;
+            }
+    
+            img {
+                @media (min-width: 34em) {
+                    position: relative;
+                    transition: opacity .4s ease,
+                                transform .275s ease-out;
+                    will-change: opacity, transition;
+                    z-index: 1;
+                }
+            }
+    
+            @media (min-width: 34em) {
+                &:hover {
+                    img {
+                        transform: scale(1.035);
+                    }
+                }
+            }
+        }
+    }
+
     /* Main Content */
 
     .main {
